--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <script type="module" src="../src/lib/index.js"></script>
 </head>
 <body>
+  <form action="">
+    <h1 class="title">Login</h1>
+    <label>
+      <i class="fa-solid fa-user"></i>
+      <input type="text" id="username">
+    </label>
+    <label>
+      <i class="fa-solid fa-lock"></i>
+      <input type="password" id="password">
+    </label>
+    <a href="#" class="link">Forgot your password?</a>
+    <button id="button">Login</button>
+  </form>
   <script type="module" src="main.js"></script>
 </body>
 </html>
